--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "body-parser": "^1.18.2",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
+    "jsonwebtoken": "^8.1.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "pg": "^7.4.0",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.19.0",
     "webpack": "^3.10.0",
