--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^8.1.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "multer": "^1.3.0",
     "pg": "^7.4.0",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.19.0",
