--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^8.1.0",
     "less": "^2.7.3",
