--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "moment": "^2.19.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "xlsx": "^0.12.7"
   }
 }
