--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
   },
   "dependencies": {
     "antd": "^3.1.1",
+    "exceljs": "^1.1.0",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "moment": "^2.19.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "xlsx": "^0.12.7"
+    "react-router-dom": "^4.2.2"
   }
 }
